# ToolsConnector

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  .project_state.json  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  agent.md  claude.md  gemini.md  pyproject.toml  render.yaml  requirements.txt
.agent/artifacts/: architecture-plan.md  multilang-sdk-rollout.md  phase1-binding-migration.md
.agents/: taskboard.yaml
.agents/orchestrator/: __init__.py  __main__.py  config.py  config.yaml  engine.py  main.py  reporter.py  runner.py  state.py  taskboard.py
.agents/orchestrator/prompts/: __init__.py  base.py
.agents/orchestrator/tools/: __init__.py  filesystem.py  git.py  shell.py  test.py
.agents/skills/agent_session_protocol/: SKILL.md
.agents/skills/connector_implementer/: SKILL.md
.agents/skills/documenter/: SKILL.md
.agents/skills/health_watcher/: SKILL.md
.agents/skills/mcp_generator/: SKILL.md
.agents/skills/principal_architect/: SKILL.md
.agents/skills/reviewer/: SKILL.md
.agents/skills/test_engineer/: SKILL.md
.claude/: launch.json  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_connector.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy-site.yml  pr-title.yml  publish-pypi.yml  release-please.yml
docs/: API.md  ARCHITECTURE_FAQ.md  GROWTH_PLAYBOOK.md  README.md  SUMMARY.md
docs/connectors/: README.md  ai-ml.md  code-platforms.md  communication.md  crm.md  database.md  devops.md  finance.md  knowledge.md  marketing.md  productivity.md  project-management.md  storage.md
docs/guides/: adding-connector.md  ai-frameworks.md  cli.md  credentials.md  installation.md  mcp-server.md  quickstart.md  resilience.md
docs/tutorials/: github-automation-python.md  send-slack-message-python.md
examples/: 01_basic_usage.py  02_mcp_server.py  03_openai_function_calling.py  04_anthropic_tool_use.py  05_multi_connector.py  06_cli_usage.sh  07_multi_tenant.py  08_rest_api.py  09_health_check.py  10_linkedin_publish.py  11_notion_workflow.py  12_google_workspace.py  12_linkedin_media.py  13_linkedin_leads.py  14_contactout.py  15_lusha.py  README.md
experiments/sdk_spike/: README.md  binding_ir.py  coverage.py  executor.py  gen_go.py  gen_ts.py  go_parity.py  parity.py  specs.py  ts_parity.py
experiments/sdk_spike/go/: bindings_gen.go  gen_github.go  gen_stripe.go  go.mod  runtime.go  stripe_e2e_test.go
experiments/sdk_spike/ts/: package.json  tsconfig.json
plan/: brainstorm.md
scripts/: build_site.py  gen_sdks.py  generate_readmes.py  notion_binding_parity.py  odoo_live_probe.py  sdk_parity.py  slack_binding_parity.py
sdks/go/: README.md  github.go  github_test.go  go.mod  notion.go  runtime.go  slack.go  stripe.go  stripe_test.go
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: github.ts  index.ts  notion.ts  runtime.ts  slack.ts  stripe.ts
sdks/typescript/test/: e2e.ts  github.e2e.ts
site/: cinematic.css  cinematic.js  data.json  index.html  robots.txt  sitemap.xml
site/connectors/acm/: index.html
site/connectors/airtable/: index.html
site/connectors/alb/: index.html
site/connectors/anthropic/: index.html
site/connectors/asana/: index.html
site/connectors/auth0/: index.html
site/connectors/calendly/: index.html
site/connectors/cloudflare/: index.html
site/connectors/cloudfront/: index.html
site/connectors/cloudwatch/: index.html
site/connectors/cohere/: index.html
site/connectors/confluence/: index.html
site/connectors/contactout/: index.html
site/connectors/datadog/: index.html
site/connectors/discord/: index.html
site/connectors/dockerhub/: index.html
site/connectors/ec2/: index.html
site/connectors/ecr/: index.html
site/connectors/ecs/: index.html
site/connectors/figma/: index.html
site/connectors/firestore/: index.html
site/connectors/freshdesk/: index.html
site/connectors/gcalendar/: index.html
site/connectors/gdocs/: index.html
site/connectors/gdrive/: index.html
site/connectors/gemini/: index.html
site/connectors/github/: index.html
site/connectors/gitlab/: index.html
site/connectors/gmail/: index.html
site/connectors/groq/: index.html
site/connectors/gsheets/: index.html
site/connectors/gtasks/: index.html
site/connectors/hubspot/: index.html
site/connectors/huggingface/: index.html
site/connectors/iam/: index.html
site/connectors/jira/: index.html
src/toolsconnector/: __init__.py
tests/: conftest.py
tests/conformance/: test_import_boundaries.py
tests/connectors/: test_cohere.py  test_contactout.py  test_gcalendar.py  test_gdocs.py  test_gdrive.py  test_gemini.py  test_github.py  test_gmail.py  test_groq.py  test_gsheets.py  test_gtasks.py  test_huggingface.py  test_linear.py  test_linkedin.py  test_linkedin_leads.py  test_lusha.py  test_mailchimp.py  test_mistral.py  test_notion.py  test_odoo.py  test_openai.py  test_people_data_chaos.py  test_salesforce.py  test_shopify.py  test_slack.py  test_stripe.py  test_twilio.py  test_zendesk.py
tests/integration/: test_examples.py  test_huggingface_mcp_subprocess.py  test_notion_mcp_subprocess.py
tests/unit/: test_connectors.py  test_errors.py  test_http_errors_helper.py  test_keystore.py  test_mcp_server_transports.py  test_runtime_action.py  test_serve_circuit_breaker.py  test_serve_cli.py  test_serve_credentials.py  test_serve_discovery.py  test_serve_filtering.py  test_serve_schema.py  test_serve_toolkit.py  test_serve_validation.py  test_spec.py  test_types.py
toolsconnector-mcp/: pyproject.toml
toolsconnector-mcp/toolsconnector_mcp/: __init__.py  cli.py  selection.py  server.py
toolsconnector/errors/: __init__.py  base.py
toolsconnector/runtime/: _sync.py  action.py  context.py
toolsconnector/spec/: types.py
toolsconnector/types/: file.py
webapp/: app.py  docs_agent.py  tool_metadata.py
(+477 files in other folders)
