[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolsconnector"
version = "0.2.0"
description = "A foundational primitive for standardizing external API tool connections — for both traditional applications and AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Sachin", email = "sachin@toolsconnector.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25.0,<1.0",
    "docstring-parser>=0.15",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://toolsconnector.github.io"
Documentation = "https://toolsconnector.github.io"
Repository = "https://github.com/ToolsConnector/ToolsConnector"
Issues = "https://github.com/ToolsConnector/ToolsConnector/issues"
Changelog = "https://github.com/ToolsConnector/ToolsConnector/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# --- Connectors: Communication ---
gmail = ["google-api-python-client>=2.0", "google-auth>=2.0", "google-auth-oauthlib>=1.0"]
slack = []
discord = []
outlook = []
teams = []
twilio = []
telegram = []

# --- Connectors: Code Platforms ---
github = []
gitlab = []

# --- Connectors: Project Management ---
jira = []
asana = []
linear = []
trello = []

# --- Connectors: Knowledge ---
notion = []
confluence = []

# --- Connectors: CRM / Support ---
hubspot = []
salesforce = []
zendesk = []
freshdesk = []
intercom = []

# --- Connectors: Finance ---
stripe = []
plaid = []

# --- Connectors: Marketing ---
sendgrid = []
mailchimp = []

# --- Connectors: Productivity (Google) ---
gsheets = []
gdocs = []
gtasks = []

# --- Connectors: Storage ---
gdrive = ["google-api-python-client>=2.0", "google-auth>=2.0"]
gcalendar = ["google-api-python-client>=2.0", "google-auth>=2.0"]
s3 = []

# --- Connectors: Database ---
supabase = []
mongodb = []
airtable = []
firestore = []
redis = []

# --- Connectors: AWS ---
ec2 = []
alb = []
route53 = []
acm = []
cloudwatch = []
iam = []
secrets_manager = []
rds = []
lambda_connector = []

# --- Connectors: DevOps ---
datadog = []
pagerduty = []
vercel = []
cloudflare = []
dockerhub = []

# --- Connectors: AI/ML ---
openai = []
anthropic = []
pinecone = []

# --- Connectors: Analytics ---
mixpanel = []
segment = []

# --- Connectors: Message Queue ---
sqs = []
cloudfront = []
ecr = []
ecs = []
rabbitmq = []

# --- Connectors: Security ---
okta = []
auth0 = []

# --- Connectors: Productivity ---
calendly = []
figma = []

# --- Connectors: E-commerce ---
shopify = []

# --- Connectors: Custom ---
webhook = []

# --- Protocol adapters ---
graphql = ["gql>=3.4", "aiohttp>=3.8"]
soap = ["zeep>=4.2"]
grpc = ["grpcio>=1.50", "protobuf>=4.0"]
websocket = ["websockets>=12.0"]

# --- KeyStore extras ---
vault = ["hvac>=1.0"]
aws-keystore = ["boto3>=1.28"]

# --- Storage extras ---
s3-storage = ["boto3>=1.28"]
gcs-storage = ["google-cloud-storage>=2.0"]

# --- Serve layer ---
mcp = ["mcp>=1.0"]
rest = ["starlette>=0.27", "uvicorn>=0.23"]

# --- Category bundles ---
google = ["toolsconnector[gmail,gdrive,gcalendar,gsheets,gdocs,gtasks]"]
microsoft = ["toolsconnector[outlook,teams]"]
communication = ["toolsconnector[gmail,slack,discord,telegram,twilio]"]
project-mgmt = ["toolsconnector[jira,asana,linear,trello]"]
databases = ["toolsconnector[supabase,mongodb,airtable,firestore,redis]"]
devops = ["toolsconnector[datadog,pagerduty,vercel,cloudflare,dockerhub]"]
ai = ["toolsconnector[openai,anthropic,pinecone]"]
crm = ["toolsconnector[hubspot,salesforce,zendesk,freshdesk,intercom]"]

# --- AWS bundles ---
aws-deploy = ["toolsconnector[ecs,ecr,cloudfront,alb,route53,acm,s3,cloudwatch]"]
aws-infra = ["toolsconnector[ec2,iam,secrets_manager]"]
aws-monitor = ["toolsconnector[cloudwatch]"]
aws-data = ["toolsconnector[s3,sqs,rds]"]
aws = ["toolsconnector[aws-deploy,aws-infra,aws-monitor,aws-data,lambda_connector]"]

# --- Agent orchestrator ---
orchestrator = ["anthropic>=0.40.0", "pyyaml>=6.0", "rich>=13.0"]

# --- Development ---
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "vcrpy>=6.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "bandit>=1.7",
    "pip-audit>=2.6",
]

# --- Everything ---
all = [
    "toolsconnector[gmail,slack,discord,github,gitlab,notion,jira,linear]",
    "toolsconnector[gdrive,gcalendar,s3,outlook,teams,confluence,asana]",
    "toolsconnector[hubspot,salesforce,stripe,twilio,sendgrid,mcp,rest]",
    "toolsconnector[cloudfront,ecr,ecs,ec2,alb,route53,acm]",
    "toolsconnector[cloudwatch,iam,secrets_manager,rds,lambda_connector]",
]

[project.scripts]
tc = "toolsconnector.serve.cli:main"

[project.entry-points."toolsconnector.connectors"]
# Connectors register here for CLI/serve discovery
# gmail = "toolsconnector.connectors.gmail:Gmail"

[tool.hatch.build.targets.wheel]
packages = ["src/toolsconnector"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
